# audioset_tagging_cnn

./: pyproject.toml  setup.py
panns/pytorch/: evaluate.py  finetune_template.py  inference.py  losses.py  main.py  models.py  pytorch_utils.py
panns/utils/: config.py  crash.py  create_black_list.py  create_indexes.py  data_generator.py  dataset.py  plot_for_paper.py  plot_statistics.py  utilities.py
