[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = []
known_third_party = []
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"